Branching strategie verplaatst naar hoofdstuk Organisatie

--- a/Hoofdstukken/conclusie.tex
+++ b/Hoofdstukken/conclusie.tex
@@ -8,7 +8,7 @@ In \autoref{hoofdstuk:requirements} staan de requirements die aan de ontworpen o
 
 \todo{Voltooi Conclusie}
 
-Hieronder worden aspecten besproken die nog missen in Canvas.hs. Ook wordt per feature aangegeven hoe ondersteuning voor die feature toegevoegd kan worden in toekomstige versies.
+Hieronder worden aspecten besproken die nog missen in Canvas.hs. Ook wordt per aspect aangegeven hoe ondersteuning voor die aspect toegevoegd kan worden in toekomstige versies.
 
 \section{Aanbevelingen}
 
