--- a/Hoofdstukken/organisatie.tex
+++ b/Hoofdstukken/organisatie.tex
@@ -41,22 +41,34 @@ Bij aanvang van een nieuwe fase wordt een planning gemaakt op basis van de taken
 Elke samenkomst wordt een \emph{Scrum bespreking} gehouden. Tijdens deze bespreking vertelt ieder teamlid kort wat hij/zij sinds de vorige bespreking gedaan heeft en of er problemen waren. Daarna vertelt het teamlid waar hij/zij na de bespreking mee bezig gaat. Het is hier de bedoeling dat ieder teamlid een concreet kortetermijn doel stelt. Door deze updates kan de scrum master bijhouden of de planning van de huidige sprint haalbaar is of dat er ingegrepen moet worden.
 
 \section{Technische organisatie} \label{sec:technische_organisatie}
-Bij het bouwen van software met een groep is het belangrijk dat elke ontwikkelaar zich kan concentreren op de feature die hij/zij aan het ontwikkelen is. Idealiter hoeft er geen rekening gehouden te worden met andere features die door anderen ontwikkeld worden. Er is dan ook gekozen om gebruik te maken van het gedistribueerde versiebeheer systeem \emph{Git} met een centraal repository op \emph{GitHub}.
+Bij het bouwen van software met een groep is het belangrijk dat elke ontwikkelaar zich kan concentreren op de feature die hij/zij aan het ontwikkelen is. Idealiter hoeft er geen rekening gehouden te worden met andere features die door anderen ontwikkeld worden. Er is dan ook gekozen om gebruik te maken van het gedistribueerde versiebeheer systeem \emph{Git} met een centrale repository op \emph{GitHub}.
 
-Er zijn afspraken gemaakt hoe deze versiebeheer software gebuikt moet worden. Zo is er gebruik gemaakt van het \emph{branching model} Gitflow\cite{Gitflow2010}. Als een bepaalde versie van de software op een bepaalde branch staat zegt dit iets over de status van die versie. Zo kan er begonnen worden aan een nieuwe feature vanaf de \inlinecode{dev} branch. En is een versie op de \inlinecode{master} branch klaar voor gebruik. Het insturen van een nieuwe versie wordt ook wel een \emph{commit} genoemd.
+Er zijn afspraken gemaakt hoe deze versiebeheer software gebuikt moet worden. Zo is er gebruik gemaakt van het \emph{branching model} Gitflow\cite{Gitflow2010}. Als een bepaalde versie van de software op een bepaalde branch staat, zegt dit iets over de status van die versie. Zo kan er begonnen worden aan een nieuwe feature vanaf de \inlinecode{dev} branch. En is een versie op de \inlinecode{master} branch klaar voor gebruik. Het insturen van een nieuwe versie wordt ook wel een \emph{commit} genoemd.
 
-\begin{figure}[H]
+Om voldoende test coverage te garanderen moet alle ontwikkelde code gecontroleerd zijn op het hebben van tests voordat het in de centrale development branch geplaatst mag worden. Dit gebeurt door middel van feature branches.  Iedere feature wordt in een aparte branch ontwikkeld, voordat een feature branch gemergd mag worden naar de dev branch, moet een pull request gemaakt worden op github. Deze pull request wordt dan beoordeeld door twee andere personen op code coverage, code netheid en documentatie. Wanneer dit in orde is wordt de code gemergd naar de dev branch. Zie  \autoref{fig:branching} voor een overzicht van de gehele branchingstrategie.
+
+\begin{figure}
+\begin{center}
+\includegraphics[keepaspectratio,width=\textwidth]{./images/branching.pdf}
+\caption{Branching strategie van Canvas.hs}
+\label{fig:branching}
+\end{center}
+\end{figure}
+
+Door deze manier van werken is altijd de development branch goed getest en is het altijd mogelijk om een nieuwe release uit te brengen met de op dat moment volledig geteste features. Iedere release wordt in de master branch uitgebracht.
+
+\subsubsection{Pull requests}
+Bij aanvang van de ontwikkeling van een nieuwe feature wordt er een nieuwe branch gemaakt vanaf de \inlinecode{dev} branch. Een voorbeeld hiervan is de \inlinecode{arcs} branch. In \autoref{sec:shapesext} staat beschreven hoe \inlinecode{Arc} shapes toegevoegd kunnen worden. Dit is gebeurd op een aparte branch die begonnen is vanaf de \inlinecode{dev} branch. \autoref{fig:pullrequest} laat een pull request op GitHub zien.
+
+Als een feature af is moet deze beoordeeld door een ander teamlid voordat de feature samengevoegd kan worden met de \inlinecode{dev} branch. Om dit te bewerkstelligen wordt gebruik gemaakt van een \emph{pull request}. Deze pull request bevat informatie over de wijzigingen ten opzichte van de versie die op de \inlinecode{dev} branch staat. Een beoordelaar kan de code lezen en deze goedkeuren. Op het moment dat de code goed wordt gekeurd komt een nieuwe versie met de nieuwe feature op de \inlinecode{dev} branch te staan.
+
+\begin{figure}
 \begin{center}
 \includegraphics[keepaspectratio,width=\textwidth]{./images/pullrequest.png}
 \caption{Pull Request \#75 Arcs geimplementeerd. – \url{https://github.com/CanvasHS/Canvas.hs/pull/75}}
 \label{fig:pullrequest}
 \end{center}
 \end{figure}
-
-\subsubsection{Pull requests}
-Bij aanvang van de ontwikkeling van een nieuwe feature wordt er een nieuwe branch gemaakt vanaf de \inlinecode{dev} branch. Een voorbeeld hiervan is de \inlinecode{arcs} branch. In \fullref{sec:shapesext} staat beschreven hoe \inlinecode{Arc} shapes toegevoegd kunnen worden. Dit is gebeurd op een aparte branch die begonnen is vanaf de \inlinecode{dev} branch, zie \autoref{fig:pullrequest}.
-
-Als een feature af is moet deze beoordeeld door een ander teamlid voordat de feature samengevoegd kan worden met de \inlinecode{dev} branch. Om dit te bewerkstelligen wordt gebruik gemaakt van een \emph{pull request}. Deze pull request bevat informatie over de wijzigingen ten opzichte van de versie die op de \inlinecode{dev} branch staat. Een beoordelaar kan de code lezen en deze goedkeuren. Op het moment dat de code goed wordt gekeurd komt een nieuwe versie met de nieuwe feature op de \inlinecode{dev} branch te staan.
 
 \subsubsection{Continuous integration met Travis CI}
 Om het beoordelen van code gemakkelijk te maken is er gebruik gemaakt van de \emph{continuous integration} software \emph{Travis CI}. Deze software luistert naar nieuwe commits naar het centrale repository, na het insturen van een nieuwe versie naar het centrale repository wordt er door Travis CI een virtuele machine opgestart. Deze machine downloadt de zojuist ingestuurde versie en compileert deze inclusief alle tests middels het uitvoeren van een \emph{buildscript}. Dit buildscript staat in de root directory van het repository. Als het compileren slaagt en alle tests slagen ook,x zal de build als geslaagd worden gemarkeerd, zie \autoref{fig:pullrequest} voor het resultaat van de laaste commit op de \inlinecode{arcs} branch. Mocht één van de tests niet slagen of het compileren niet slagen, wordt de build als mislukt gemarkeerd.
