Fixed various issues and TODOs

--- a/Hoofdstukken/appendices/2_uitbreiden/events.tex
+++ b/Hoofdstukken/appendices/2_uitbreiden/events.tex
@@ -43,9 +43,10 @@ Vervolgens zal de functie \inlinecode{sendWindowResizeEvent(width,height)} aange
     });
 ...
 \end{lstlisting}
-Na het toevoegen van deze stukken code is het \inlinecode{WindowResize} toegevoegd aan het protocol volgens het vooraf gedefineerde protocol.
+Na het toevoegen van deze stukken code is het \inlinecode{WindowResize} toegevoegd aan het protocol volgens het vooraf gedefinieerde protocol.
+
 \subsection{Haskell}
-Vervolgens zal aan \todo{De haskell ook anders beschrijven}de Haskell kant de uitbreiding aan het protocol correct moeten intrepeteren en afhandelen. Eerst dient de API uitgebreid te worden met een nieuw data type. Dit zal gedaan moeten worden in de file \emph{Data.hs}.
+Een uitbreiding op het protocol zal ook aan \todo{De haskell ook anders beschrijven}de Haskell-kant correct geïnterpreteerd en afgehandeld moeten worden. Eerst dient de API uitgebreid te worden met een nieuw data type. Dit zal gedaan moeten worden in de file \emph{Data.hs}.
 \begin{lstlisting}[language=Haskell]
 -- | The events the user can expect to get as input
 data Event
