--- a/Hoofdstukken/appendices/2_uitbreiden/shapes.tex
+++ b/Hoofdstukken/appendices/2_uitbreiden/shapes.tex
@@ -94,7 +94,7 @@ Voor het toevoegen van Shapes aan de JavaScript-zijde van Canvas.hs is het toevo
 
 \subsection{Haskell}
 
-Binnen \todo{de haskell, zo noemen we dat niet de module}de haskell kan uitbreiden op twee manieren, de eerste manier is om door de beschikbare shapes een nieuwe shape te maken, zo hoeft het protocol niet aangepast te worden. Als voorbeeld nemen we een rechthoek met afgeronde hoekjes, we defini\"eren een functie \inlinecode{roundedRect} die een shape teruggeeft.
+Binnen de haskell kan uitbreiden op twee manieren, de eerste manier is om door de beschikbare shapes een nieuwe shape te maken, zo hoeft het protocol niet aangepast te worden. Als voorbeeld nemen we een rechthoek met afgeronde hoekjes, we defini\"eren een functie \inlinecode{roundedRect} die een shape teruggeeft.
 
 \lstinputlisting[style=densecode, language=Haskell]{Examples/RoundedRect.hs}
 
