--- a/Hoofdstukken/evaluatie.tex
+++ b/Hoofdstukken/evaluatie.tex
@@ -1,5 +1,5 @@
 \chapter{Evaluatie} \label{hoofdstuk:evaluatie}
-\todo{evaluatie tenopzichte van de requirements}
+\todo{evaluatie tenopzichte van de requirements, of hoort dat in de conclusie?}
 
 \input{./Hoofdstukken/evaluatie/problemen.tex}
 \input{./Hoofdstukken/evaluatie/planning.tex}
