--- a/references.bib
+++ b/references.bib
@@ -85,7 +85,7 @@
 	year = "2014",
 	howpublished = {\url{http://kineticjs.com/}}
 }
-@misc{Webscokets,
+@misc{Websockets,
 	author = {Jasper Van der Jeugt and Siniša Biđin and Steffen Schuldenzucker and Alex Lang},
 	title = "Websockets",
 	month = "december",
