--- a/Hoofdstukken/ontwerp/detail/externelibraries.tex
+++ b/Hoofdstukken/ontwerp/detail/externelibraries.tex
@@ -3,16 +3,16 @@
 Bij de ontwikkeling van Canvas.hs is gebruik gemaakt van een aantal externe software bibliotheken. Voor veel van de zaken die in het Canvas.hs pakket moeten gebeuren zijn uitstekende bibliotheken beschikbaar. Hieronder worden de gekozen externe bibliotheken toegelicht.
 
 \subsubsection{HTTP-server}
-Bij het starten van een applicatie met Canvas.hs wordt automatisch een browserscherm met daarop het canvas geopend. Deze pagina wordt samen met de benodigde javascript bestanden aan de browser geserveerd als statische content. Om deze content te kunnen serveren is een HTTP-server nodig. In Canvas.hs hebben we gekozen voor de ``warp''\cite{Warp} module. De voornaamste redenen hiervoor zijn dat Warp lichtgewicht, goed gedocumenteerd en eenvoudig in gebruik is. Andere alternatieven zijn ``happstack''\cite{Happstack}, ``hyena''\cite{Hyena} en ``snap server''\cite{SnapServer}. Deze bieden allen veel meer dan alleen de mogelijkheid om via HTTP bestanden te serveren en waren daardoor te veel en te ingewikkeld voor Canvas.hs
+Bij het starten van een applicatie met Canvas.hs wordt automatisch een browserscherm met daarop het canvas geopend. Deze pagina wordt samen met de benodigde JavaScript bestanden aan de browser geserveerd als statische content. Om deze content te kunnen serveren is een HTTP-server nodig. In Canvas.hs hebben we gekozen voor de \emph{warp} \cite{Warp} module. De voornaamste redenen hiervoor zijn dat Warp lichtgewicht, goed gedocumenteerd en eenvoudig in gebruik is. Andere alternatieven zijn \emph{happstack} \cite{Happstack}, \emph{hyena} \cite{Hyena} en \emph{snap server} \cite{SnapServer}. Deze bieden allen veel meer dan alleen de mogelijkheid om via HTTP bestanden te serveren en waren daardoor te veel en te ingewikkeld voor Canvas.hs
 
 \subsubsection{Websockets}
-In Canvas.hs wordt het resultaat van de user applicatie naar de javascript applicatie gestuurd via een webscoket. In Canvas.hs wordt gebruik gemaakt van de ``websockets'' \cite{Websockets} module. Deze module is goed gedocumenteerd en wordt door de auteur goed onderhouden.
+In Canvas.hs wordt het resultaat van de user applicatie naar de javascript applicatie gestuurd via een webscoket. In Canvas.hs wordt gebruik gemaakt van de \emph{Websockets}  \cite{Websockets} module. Deze module is goed gedocumenteerd en wordt door de auteur goed onderhouden.
 
 \subsubsection{JSON}
-Voor het encoderen en decoderen van en naar JSON wordt in de Canvas.hs module de ``Aeson''\cite{Aeson} gebruikt. Hiermee is het relatief eenvoudig om datastructuren in Haskell om te encoderen naar JSON en vice-versa. Er is voor Aeson gekozen omdat deze goed gedocumenteerd is. Een alternatief voor Aeson was ``Text.JSON'', deze is niet gebruikt, omdat deze gebrekkig gedocumenteerd is.
+Voor het encoderen en decoderen van en naar JSON wordt in de Canvas.hs module de \emph{Aeson} \cite{Aeson} gebruikt. Hiermee is het relatief eenvoudig om datastructuren in Haskell om te encoderen naar JSON en vice-versa. Er is voor Aeson gekozen omdat deze goed gedocumenteerd is. Een alternatief voor Aeson was \emph{Text.JSON}. Dit is niet gebruikt, omdat het gebrekkig gedocumenteerd is.
 
 \subsubsection{jQuery}
-Voor de interactie met de webpagina vanuit de JavaScriptapplicatie is gekozen voor ``jQuery''\cite{jQuery}. jQuery is een volwassen, lichte en snelle bibliotheek die veel gebruikt wordt en goed wordt onderhouden. jQuery verbergt veel van de fouten en inconsequenties die er tussen verschillende browsers bestaan. Door jQuery's callback gebaseerde programmeerpattern dat werkt met eventhandlers is het uitstekend geschikt om events af te vangen en door te sturen naar de module. Daarnaast kan met jQuery gemakkelijk de DOM gemanipuleerd worden.
+Voor de interactie met de webpagina vanuit de JavaScriptapplicatie is gekozen voor \emph{jQuery} \cite{jQuery}. jQuery is een volwassen, lichte en snelle bibliotheek die veel gebruikt wordt en goed wordt onderhouden. jQuery verbergt veel van de fouten en inconsequenties die er tussen verschillende browsers bestaan. Door jQuery's callback gebaseerde programmeerpattern dat werkt met eventhandlers is het uitstekend geschikt om events af te vangen en door te sturen naar de module. Daarnaast kan met jQuery gemakkelijk de DOM gemanipuleerd worden.
 
 \subsubsection{KineticJS}
-Voor de interactie tussen de JavaScriptapplicatie en het canvas is gekozen voor ``KineticJS''\cite{KineticJS}. KineticJS biedt ondersteuning voor het tekenen en groeperen van verschillende vormen en biedt bovenal ondersteuning om gebeurtenissen (zoals muisklikken) die op deze groepen van vormen plaatsvinden als zodanig te identificeren. Hierdoor is het mogelijk te identificeren op welke \inlinecode{Shape} een \inlinecode{Event} plaatsvond en dat aan de eventHandler door te geven.
+Voor de interactie tussen de JavaScriptapplicatie en het canvas is gekozen voor \emph{KineticJS} \cite{KineticJS}. KineticJS biedt ondersteuning voor het tekenen en groeperen van verschillende vormen en biedt bovenal ondersteuning om gebeurtenissen (zoals muisklikken) die op deze groepen van vormen plaatsvinden als zodanig te identificeren. Hierdoor is het mogelijk te identificeren op welke \inlinecode{Shape} een \inlinecode{Event} plaatsvond en dat aan de eventHandler door te geven.
