--- a/Hoofdstukken/testplan.tex
+++ b/Hoofdstukken/testplan.tex
@@ -5,14 +5,15 @@ Gedurende het gehele ontwikkelingstraject moeten tests ontwikkeld worden. Voor e
 De buildconfiguratie en testconfiguraties worden in de cabal file bijgehouden. Met het commando cabal test kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies over het uitvoeren van tests.
 
 \section{Continuous Integration}
-Iedere ontwikkelaar zal gedurende de ontwikkeling zijn\todo{anders formuleren geen Engelse woorden er in dumpen} aanpassingen pushen naar de Github repository. De Github repository is gekoppeld met Travis een cloud based continuous integration server. Tests worden automatisch uitgevoerd door Travis na het pushen van iedere commit. Indien een build faalt, zal hierover een bericht in Hipchat geplaatst worden. Doordat builds automatisch getest worden is altijd duidelijk: Welke ontwikkelaar fouten in Canvas.hs introduceert, wat de status van iedere branch is en of een branch gemerged kan worden naar de development branch.
+Iedere ontwikkelaar stuurt gedurende de ontwikkeling zijn aanpassingen naar de Github repository van Canvas.hs. De Github repository is gekoppeld met Travis, een cloud-based continuous integration server. Travis voert automatisch tests uit na elke commit die naar de repository gestuurd is. Indien Travis fouten detecteert bij het draaien van de tests, zal hierover een bericht in Hipchat geplaatst worden. Doordat de code automatisch getest word is altijd duidelijk welke ontwikkelaar fouten in Canvas.hs introduceert, wat de status van iedere branch is en of een branch gemergd kan worden naar de development branch.
 
-\todo{Beter alle losse delen geschrijven}
+\todo{Beter alle losse delen schrijven}
 \todo{Duidelijkere TODOs schrijven want deze is mij compleet onduidelijk??}
+
 \section{JavaScript} 
-Aan de client side wordt gewerkt met JavaScript, het Jasmine test framework wordt gebruikt om de tests te ontwikkelen. Door middel van PhantomJS kunnen de tests vanaf de command line worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook op de build server uitgevoerd worden. Verder zal er gebruik gemaakt worden van de imagediff library om de daadwerkelijk getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js.
+Aan de client side wordt gewerkt met JavaScript. Het Jasmine test framework wordt gebruikt om de tests hiervoor te ontwikkelen. Door middel van PhantomJS kunnen de tests vanaf de command prompt worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook op de build server uitgevoerd worden. Verder wordt er gebruik gemaakt van de imagediff library om getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js.
 
 \section{Haskell}
-De Haskellcode in Canvas.hs wordt getest met behulp van ``Hspec''. Hier is voor gekozen omdat Hspec relatief eenvoudig werkt en goed integreert met Cabal. Hierbij kan Hspec automatisch de verschillende tests in een map ontdekken en uitvoeren.
+De Haskellcode in Canvas.hs wordt getest met behulp van \emph{Hspec}. Hier is voor gekozen omdat Hspec relatief eenvoudig werkt en goed integreert met Cabal. Hierbij kan Hspec automatisch de verschillende tests in een bestandsmap ontdekken en uitvoeren.
 
-In samenwerking met Hspec wordt QuickCheck gebruikt. Dit veel gebruikte testframework maakt het mogelijk om een groot aantal willekeurige testcases uit te voeren. Dit geeft extra zekerheid over de geteste code aangezien er naast de bekende edge cases, waarvoor tests in Hspec zijn geschreven, ook een groot aantal willekeurige cases wordt getest.
+In samenwerking met Hspec wordt \emph{QuickCheck} gebruikt. Dit veel gebruikte testframework maakt het mogelijk om een groot aantal willekeurige testcases uit te voeren. Dit geeft extra zekerheid over de geteste code aangezien er naast de bekende edge cases, waarvoor tests in Hspec zijn geschreven, ook een groot aantal willekeurige cases wordt getest.
