--- a/Hoofdstukken/conclusie.tex
+++ b/Hoofdstukken/conclusie.tex
@@ -8,9 +8,10 @@ In \autoref{hoofdstuk:requirements} staan de requirements die aan de ontworpen o
 
 \todo{Voltooi Conclusie}
 
-Hieronder worden aspecten besproken die nog missen in Canvas.hs. Ook wordt per aspect aangegeven hoe ondersteuning voor die aspect toegevoegd kan worden in toekomstige versies.
+Hieronder worden aspecten besproken die nog missen in Canvas.hs. 
 
 \section{Aanbevelingen}
+Canvas.hs is bedoeld als vervanging voor de vorige omgeving die bij het vak Functioneel Programmeren gebruikt werd. Zodoende brengt Canvas.hs voordelen met zich mee over dat systeem. Er zijn echter nog mogelijkheden voor andere features. Wij, als ontwikkelaars van Canvas.hs, zetten hieronder enkele features neer die momenteel niet in het project meegenomen zijn, maar die in toekomstige versies toegevoegd zouden kunnen worden. Ook wordt per feature aangegeven hoe ondersteuning voor die feature toegevoegd kan worden.
 
 \subsubsection{Image type}
 Canvas.hs ondersteunt een breed scala aan grafische primitieven, zo goed als alle vectortekeningen zijn te maken met deze library. Helaas mist er ondersteuning voor plaatjes, zo kan de gebruiker bijvoorbeeld geen fotoalbum in Haskell/Canvas.hs schrijven.
@@ -25,6 +26,7 @@ Het implementeren van nieuwe shapes wordt in een van de appendices uitgebreid be
 Binnen Canvas.hs kan tot op heden alleen met vaste keuren gevuld worden, voor het tekenen van knoppen is het vaak gewenst iets van een kleurverloop te gebruiken. Een kleurverloop kan namelijk diepte bieden aan een grafisch element. Het ondersteunen van kleurverlopen is ook niet lastig, de clientside Javascript library (Kinetic) ondersteunt al kleurverlopen, dus het is een kwestie van het toevoegen en implementeren van een API voor de gebruiker.
 
 \subsubsection{Grafische toolkit}
+\todo{Hier iets schrijven}
 
 \subsubsection{Delta updates}
 Op dit moment wordt de client behandeld alsof het stateless is, de module stuurt na elke verandering de hele grafische boom op en de client gooit zijn hele interne boom weg en accepteerd de nieuwe. Deze manier van werken is vanuit een Haskell oogpunt logisch, maar door het gebrek aan caching is het in Javascript traag. Daartoe is het handig om delta updates te sturen, zo kan er opgestuurd worden dat een rondje drie keer zo groot geworden is. Helaas is dit nog niet triviaal, er moet bijvoorbeeld rekening gehouden worden met identieke nodes (bijvoorbeeld een cirkel op (0,0) met radius 10)
