--- a/verslag.tex
+++ b/verslag.tex
@@ -22,6 +22,8 @@
 \usepackage{etoolbox}
 \usepackage{newfloat} %used to draw trees (qtree) in a floating enviroment for captions
 \usepackage[a4paper]{geometry}
+\usepackage{subcaption}
+
 \providetoggle{longTests}
 \DeclareFloatingEnvironment[fileext=lod]{diagram} %create a floating enviroment for qtree
 
