Fixed inclusion of eps images with epstopdf package

--- a/Hoofdstukken/resultaten/performance_analyse.tex
+++ b/Hoofdstukken/resultaten/performance_analyse.tex
@@ -12,20 +12,19 @@ Er is nog wel een optimalisatie uitgevoerd, er was het vermoeden dat er in de Ha
 Er waren vermoedens dat de oorzaak gevonden kon worden in het omzetten van \inlinecode{Strings} naar \inlinecode{ByteSrings} en vice versa.
 
 \begin{figure}
-\begin{subfigure}{\textwidth}
-  \centering
-  \includegraphics[width=0.5\linewidth]{./images/actionsDemoAfterByteStrings.eps}
-  \caption{Heap profile voor de wijziging}
-  \label{fig:sub1}
-\end{subfigure}
-\begin{subfigure}{\textwidth}
-  \centering
-  \includegraphics[width=0.5\linewidth]{./images/actionsDemoBeforeByteStrings.eps}
-  \caption{Heap profile na de wijziging}
-  \label{fig:sub2}
-\end{subfigure}
-\caption{Heap profiles}
-\label{fig:test}
+\begin{center}
+\includegraphics[keepaspectratio,width=0.8\textwidth]{./images/actionsDemoAfterByteStrings.eps}
+\caption{Heap profile voor de wijziging}
+\label{fig:sub1}
+\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[keepaspectratio,width=0.8\textwidth]{./images/actionsDemoAfterByteStrings.eps}
+\caption{Heap profile na de wijziging}
+\label{fig:sub1}
+\end{center}
 \end{figure}
 
 \todo{Schrijven over de wijziging's impact}
