--- a/verslag.tex
+++ b/verslag.tex
@@ -23,6 +23,7 @@
 \usepackage{newfloat} %used to draw trees (qtree) in a floating enviroment for captions
 \usepackage[a4paper]{geometry}
 \usepackage{subcaption}
+\usepackage{epstopdf}
 
 \providetoggle{longTests}
 \DeclareFloatingEnvironment[fileext=lod]{diagram} %create a floating enviroment for qtree
