--- a/verslag.tex
+++ b/verslag.tex
@@ -88,6 +88,7 @@
            {.9}{{{\color[HTML]{009999}{.9}}}}{1}
            {"}{\textquotedbl}1
            {'}{\textquotesingle}1
+	{`}{{$^{\backprime}$}}1
 }
   % Use this to fit more code in the block
 \lstdefinestyle{densecode}{
