--- a/verslag.tex
+++ b/verslag.tex
@@ -3,6 +3,8 @@
 \usepackage{graphicx}
 \usepackage{todonotes}
 \usepackage[dutch]{babel} 
+\usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{enumerate}
 \usepackage[utf8]{inputenc} % Set input to UTF-8 to enable easy input of umlauts etc.
 \usepackage{hyperref} % Turn references into links.
@@ -87,9 +89,9 @@
            {.7}{{{\color[HTML]{009999}{.7}}}}{1}
            {.8}{{{\color[HTML]{009999}{.8}}}}{1}
            {.9}{{{\color[HTML]{009999}{.9}}}}{1}
+           {`}{${}^\backprime$}1
            {"}{\textquotedbl}1
            {'}{\textquotesingle}1
-	{`}{{$^{\backprime}$}}1
 }
   % Use this to fit more code in the block
 \lstdefinestyle{densecode}{
