Ik vergat de helft van de files

--- a/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
@@ -1,9 +1,9 @@
 \section{Basis Instructies}
 
-Om een Canvas.hs applicatie te schrijven moet de programmeur een handlerfunctie schrijven die events opvangt. Een handlerfunctie heeft als type \inlinecode{handler :: a -> Event -> (a, Output)}. De \inlinecode{a}'s in dit signatuur zijn \inlinecode{State}'s. Elke keer dat de library een event binnenkrijgt zal de handlerfunctie van de programmeur aangeroepen worden met de state. Zoals de typesignatuur laat zien, is de programmeur verplicht deze state terug te geven zodat Canvas.hs hem op kan slaan.
+Om een Canvas.hs applicatie te schrijven moeten we een handlerfunctie schrijven die events opvangt. Een handlerfunctie heeft als type \inlinecode{handler :: a -> Event -> (a, Output)}. De \inlinecode{a}'s in dit signatuur zijn \inlinecode{State}'s. Elke keer dat de library een event binnenkrijgt zal onze handlerfunctie aangeroepen worden met de state. Zoals de typesignatuur laat zien, zijn we verplicht deze state terug te geven zodat Canvas.hs hem op kan slaan.
 
 \subsection{Termen}
-Binnen deze handleiding zullen een aantal termen gebruikt worden.
+Binnen deze handleiding zullen we een aantal termen gebruiken.
 \begin{itemize}
 	\item Output
 De programmeur is verandwoorderlijk voor het produceren van output, meestal zal de programmeur een Shape en een lijst van Actions geven maar ook een BlockingAction is mogelijk.
@@ -17,6 +17,8 @@ Containers zijn shapes die meerdere shapes kunnen bevatten, zo kan de programmeu
 Soms zal de programmeur een IO bewerking willen uitvoeren, zoals het downloaden van een file. Dit is binnen Canvas.hs gemodelleerd als een action.
 	\item BlockingAction
 Er zijn bepaalde acties die de uitvoer van het programma blokkeren, zoals het laden van een file. Het belangrijk voor de programmeur is dat het niet mogelijk is om zowel een BlockingAction als een Shape terug te geven. 
+    \item Defaults
+Sommige elementen in de grafische boom bevatten veel mogelijkheden, zo kan tekst een ander font hebben, een andere grootte, schuin staan, dik zijn, etc. Daarom zijn er defaults gemaakt, dit is een functie die een aantal standaardwaarden teruggeeft. Voor tekst is dit bijvoorbeeld Arial, 12 pixels groot, niet bold of schuin en links uitgelijnd.
 \end{itemize}
 
 \subsection{Canvas.Hs 101}
@@ -24,6 +26,6 @@ Om te beginnen introduceren we hier eerst een voorbeeld van een programma dat ee
 
 \lstinputlisting[style=densecode]{Examples/CanvasHs101.hs}
 
-In het voorbeeld wordt een handler gemaakt. Hiervoor wordt in de main functie, de functie installEventHandler uit de module CanvasHs aangeroepen. Daardoor weet Canvas.hs welke functie het aan moet roepen als er een event plaatsvind. Als Canvas.hs dan een StartEvent vuurt, moet de handler een state en een output teruggeven. Als state is een simpele integer gekozen en de output is in dit geval slechts een Shape. Deze code tekent een zwarte cirkel met radius 50 op punt (200,200).
+In het voorbeeld wordt een handler gemaakt. Hiervoor wordt in de main functie, de functie installEventHandler uit de module CanvasHs aangeroepen. Deze functie wordt ook aangeroepen als er een event plaatsvind. Als Canvas.hs dan een StartEvent vuurt, moet onze handler een state en een output teruggeven. Als state is een simpele integer gekozen en de output is in dit geval slechts een Shape. Deze code tekent een zwarte cirkel met radius 50 op punt (200,200).
 
-Dit voorbeeld heeft geen modifiers, er zijn geen Shapes die werken op andere shapes. Daarnaast zijn er in dit eenvoudige voorbeeld geen Actions gebruikt. Er wordt uit de module CanvasHs wel een functie shape gebruikt, die een Shape aanneemt en een Output met alleen Shape teruggeeft.
+Dit voorbeeld heeft geen modifiers, er zijn geen Shapes die werken op andere shapes. Daarnaast zijn er in dit eenvoudige voorbeeld geen Actions gebruikt. Er wordt uit de module CanvasHs wel een functie shape gebruikt, deze hulpfunctie returnt alleen een shape zonder acties en is daarmee gelijk aan \inlinecode{(Just shape, [])}.
