--- a/Hoofdstukken/appendices/1_gebruikershandleiding/voorbeelden.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/voorbeelden.tex
@@ -1,12 +1,14 @@
 % !TEX spellcheck = nl_NL
 \section{Voorbeelden}
-Om het gebruik van Canvas.Hs te illustreren zal hieronder een aantal voorbeelden uitgewerkt worden. De eerste voorbeelden zullen in uitgebreid detail besproken worden, waarna een aantal geavanceerde voorbeelden kort besproken worden.
+\subsubsection{Modifiers}
+We hebben eerder gedefinieerd wat modifiers zijn, een modifier neemt een shape als argument en past daar zijn modificatie op toe, stel dat we een vierkant willen draaien, dan is dat in code: \inlinecode{Rotate 45 \$ Rect (x,y) width height}. Hieronder zijn een aantal modifiers te zien, er worden hier vier vierkantjes getekend, de eerste heeft geen modifiers, de tweede is gedraaid, de derde is vergroot en de laaste is gedraaid en geschaald.
+
+\lstinputlisting[style=densecode]{Examples/Modifiers.hs}
+
 
 \subsubsection{Events}
 \todo{Defaults}
-Stel dat we het rondje van kleur willen laten veranderen als er op geklikt wordt, dan moet het rondje zich interesseren voor klikevents, verder moeten we een case toevoegen aan onze handler om te specificeren wat er moet gebeuren als er op het rondje geklikt wordt. Belangrijk om te zien hier is dat er een default gebruikt wordt. Er is een functie die een standaard waarde geeft voor bepaalde records. Voor events is dat een record met geen ID, en alle interesses op False, als de standaardrecord dus op een element toegepast wordt gebeurd er niets. Daartoe moeten we dit standaardrecord vullen, er moet een eventId bedacht worden en er moet aangegeven worden waar deze shape naar wil luisteren.
-
-Later kan er dan op het eventId gematched worden, in dit voorbeeld zal het rondje rood worden als er op geklikt wordt.
+Stel dat we het rondje van kleur willen laten veranderen als er op geklikt wordt, dan moet het rondje zich interesseren voor klikevents, verder moeten we een case toevoegen aan onze handler om te specificeren wat er moet gebeuren als er op het rondje geklikt wordt. Belangrijk om te zien hier is dat er een default gebruikt wordt. Voor events is de default een record zonder ID die niet geinteresseerd is in events. Als we het standaardrecord gebruiken voor een element reageert dit element nerges op. We moeten dit standaardrecord dus vullen, er moet een eventId bedacht worden en er moet aangegeven worden waar deze shape naar wil luisteren. Hieronder hebben we het rondje een eventId circle gegeven, en aangegeven dat we ge"interesseerd zijn in muiskliks.
 
 \lstinputlisting[style=densecode]{Examples/Events.hs}
 
@@ -24,11 +26,17 @@ Canvas.hs ondersteunt ook tekst, het tekenen van tekst is speciaal omdat er veel
 Hieronder worden alle mogelijkheden met tekst in een woordweb getoond, let vooral op hoe in de defaults steeds een bepaalde sleutel aangepast wordt.
 \lstinputlisting[style=densecode]{Examples/Text.hs}
 
-\subsubsection{Blocking Actions}
-\todo{doe hier iets neerzetten}
+\subsubsection{Actions 101}
 
-\subsubsection{Actions}
-\todo{doe hier iets neerzetten}
+Binnen Canvas.hs kunnen we bestandjes lokaal en over afstand opslaan, om dit te illustreren maken we eerst een simpele demo die "Hello World" download in de browser als er op een knop gedrukt wordt. We moeten dus een knop tekenen die ge"interesseerd is in muiskliks, een handler geval schrijven voor wat er moet gebeuren als er op die knop geklikt wordt en dan moeten we een \inlinecode{Download} actie uitvoeren. Voor de duidelijkheid zijn er twee extra functies in dit voorbeeld, \inlinecode{drawAll} levert een shape op voor het canvas, \inlinecode{downloadAction} levert de specifieke downloadactie op.
+
+\lstinputlisting[style=densecode]{Examples/Actions101.hs}
+
+\subsubsection{Resize}
+
+Tot nu toe hebben we alles op vaste size canvas getekend, het is echter mogelijk om andere formaten canvas te gebruiken. Om de grootte van het canvas aan te passen moet er een \inlinecode{DisplayType} actie uitgevoerd worden, daarnaast moet er ook gereageerd worden op een \inlinecode{Resize} event. Het onderstaande programma tekent een rondje in het midden van het scherm, en zorgt ervoor dat de straal van het rondje meeschaalt met de hoogte en breedte. Als we op "f" drukken, dan vergroot het canvas tot de grootte van het browservenster, als we "w" indrukken wordt het canvas weer 900 bij 600, en als we "f11" indrukken vragen we de browser om fullscreen te gaan.
+
+\lstinputlisting[style=densecode]{Examples/Resize.hs}
 
 \subsubsection{Timers}
 \todo{doe hier iets neerzetten}
