Reference to Comet in Websockets paragraph added

--- a/references.bib
+++ b/references.bib
@@ -92,3 +92,12 @@
 	year = "2013",
 	howpublished = {\url{http://hackage.haskell.org/package/websockets}}
 }
+
+@inproceedings{comet2007,
+  title={A comparison of push and pull techniques for ajax},
+  author={Bozdag, Engin and Mesbah, Ali and Van Deursen, Arie},
+  booktitle={Web Site Evolution, 2007. WSE 2007. 9th IEEE International Workshop on},
+  pages={15--22},
+  year={2007},
+  organization={IEEE}
+}
