--- a/Hoofdstukken/ontwerp/detail/architectuur.tex
+++ b/Hoofdstukken/ontwerp/detail/architectuur.tex
@@ -26,6 +26,6 @@ In Cavas.hs wordt voor deze communicatie gebruik gemaakt van JSON \cite{JSON2006
 Het protocol tussen de client en de server bevat voornamelijk interface data. De structuur en de attributen moeten vertaald worden van de Haskell omgeving om gebruikt te worden om te tekenen in het Canvas en vervolgens input van de gebruiker in de client te ondersteunen. De datastructuur van het protocol lijkt zoveel mogelijk op die van het canvas. Hierdoor kan data die binnenkomt bij de javascript applicatie zonder al te veel veranderingen op het canvas getekend worden.
 
 \paragraph{Statelessness} \label{par:statelessness}
-De Canvas.hs module houdt de huidige grafische boom niet bij. Deze wordt na ontvangst van de gebruiker applicatie onmiddelijk geëncodeerd naar JSON en opgestuurd naar de Javascriptapplicatie. Dit heeft een aantal voordelen. Allereerst maakt dit het gebruik van de module door de programmeur gemakkelijker. Elke keer dat de eventHandler wordt uitgevoerd wordt hiervan verwacht dat deze een volledige grafische boom oplevert waardoor het voor de programmeur en de module niet nodig is om uit te zoeken waar de grafische boom precies veranderd moet worden. Bijkomend voordeel hiervan is dat er slechts één plek is waar de huidige grafische boom wordt bijgehouden: de Javascriptapplicatie. Hierdoor kunnen er geen synchronisatiefouten tussen de Haskell module en de Javascriptapplicatie ontstaan. 
+De Canvas.hs module houdt de huidige grafische boom niet bij. Deze wordt na ontvangst in de gebruikerapplicatie onmiddellijk geëncodeerd naar JSON en opgestuurd naar de Javascriptapplicatie. Dit heeft een aantal voordelen. Allereerst maakt dit het gebruik van de module door de programmeur gemakkelijker. Elke keer dat de eventHandler wordt uitgevoerd wordt hiervan verwacht dat deze een volledige grafische boom oplevert waardoor het voor de programmeur en de module niet nodig is om uit te zoeken waar de grafische boom precies veranderd moet worden. Bovendien is er hierdoor slechts één plek is waar de huidige grafische boom wordt bijgehouden: de Javascriptapplicatie. Hierdoor kunnen er geen synchronisatiefouten tussen de Haskell module en de Javascriptapplicatie ontstaan. 
 
-Nadeel van deze aanpak is dat er veel overhead is door het voortdurend versturen van de volledige grafische boom. Zelfs voor het verplaatsen van één object moet de hele boom opnieuw verstuurd worden. Dat er veel data verstuurd wordt is acceptabel aangezien het systeem ontwikkeld is voor lokaal gebruik en data over websockets lokaal zeer snel verstuurd kan worden. De aanpak levert echter wel problemen op als er snel veel getekend wordt, doordat het tekenen naar het canvas in onze aanpak relatief veel tijd kost. Hier wordt verder op gereflecteerd in \fullref{hoofdstuk:conclusie}.\todo{Dit daadwerkelijk doen.}
+Nadeel van deze aanpak is dat er veel overhead is door het voortdurend versturen van de volledige grafische boom. Zelfs voor het verplaatsen van één object moet de hele boom opnieuw verstuurd worden. Dat er veel data verstuurd wordt is acceptabel aangezien het systeem ontwikkeld is voor lokaal gebruik en data over websockets lokaal zeer snel verstuurd kan worden. De aanpak levert echter wel problemen op als er snel veel getekend wordt, doordat het tekenen naar het canvas in onze aanpak relatief veel tijd kost en dat moet elke keer dat de boom ontvangen wordt aan de Javascriptkant gedaan worden. Op dit probleem wordt verder gereflecteerd in de paragraaf over delta updates van \fullref{hoofdstuk:conclusie}.
