Test plan verbeterd, heeft nog wat extra uitleg nodig, nieuwe referenties

--- a/Hoofdstukken/testplan.tex
+++ b/Hoofdstukken/testplan.tex
@@ -1,19 +1,15 @@
 \chapter{Testplan} \label{hoofdstuk:testplan}
-Gedurende het gehele ontwikkelingstraject moeten tests ontwikkeld worden. Voor elke requirement, feature en elk object moet een bijbehorende test worden ontwikkeld. In dit hoofdstuk staat hoe het testen is opgezet. Samen met de branchingstrategie in \autoref{sec:technische_organisatie} kan voldoende code coverage gegarandeerd worden.
+Gedurende het gehele ontwikkelingstraject moeten tests ontwikkeld worden. Voor elke requirement, feature en elk object moet een bijbehorende test worden ontwikkeld. In dit hoofdstuk staat hoe het testen is opgezet en welke technieken daarbij zijn gebruikt.
 
-\section{Cabal}
-De buildconfiguratie en testconfiguraties worden in de cabal file bijgehouden. Met het commando cabal test kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies over het uitvoeren van tests.
+Er zijn een aantal tests geschreven in code deze kunnen gemakkelijk uitgevoerd worden via \emph{cabal}, een gereedschap dat gebruikt wordt bij programmeren in Haskell. Deze geschreven tests testen zowel de Haskell code als de JavaScript code. De testconfiguraties voor beide typen tests worden in een zogenaamde cabal file bijgehouden. Met het commando \inlinecode{cabal test} kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies over het uitvoeren van tests.
 
 \section{Continuous Integration}
-Iedere ontwikkelaar stuurt gedurende de ontwikkeling zijn aanpassingen naar de Github repository van Canvas.hs. De Github repository is gekoppeld met Travis, een cloud-based continuous integration server. Travis voert automatisch tests uit na elke commit die naar de repository gestuurd is. Indien Travis fouten detecteert bij het draaien van de tests, zal hierover een bericht in Hipchat geplaatst worden. Doordat de code automatisch getest word is altijd duidelijk welke ontwikkelaar fouten in Canvas.hs introduceert, wat de status van iedere branch is en of een branch gemergd kan worden naar de development branch.
-
-\todo{Beter alle losse delen schrijven}
-\todo{Duidelijkere TODOs schrijven want deze is mij compleet onduidelijk??}
+Zoals eerder genoemd in \autoref{sec:technische_organisatie} is er tijdens het project gebruik gemaakt van automatisch testen. Iedere ontwikkelaar stuurt gedurende de ontwikkeling zijn aanpassingen naar de centrale repository. Deze centrale repository is gekoppeld met Travis, een cloud-based continuous integration server. Travis voert automatisch tests uit na elke commit die naar de repository gestuurd is. Indien Travis fouten detecteert bij het draaien van de tests wordt dat aan de ontwikkelaars gemeld. Doordat de code automatisch getest wordt is altijd duidelijk welke bij welke commit fouten in worden introduceert, wat de status van iedere branch is en of een branch gemergd kan worden naar de development branch.
 
 \section{JavaScript} 
-Aan de client side wordt gewerkt met JavaScript. Het Jasmine test framework wordt gebruikt om de tests hiervoor te ontwikkelen. Door middel van PhantomJS kunnen de tests vanaf de command prompt worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook op de build server uitgevoerd worden. Verder wordt er gebruik gemaakt van de imagediff library om getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js.
+Aan de client side wordt gewerkt met JavaScript. Het Jasmine\cite{Jasmine} test framework wordt gebruikt om de tests hiervoor te ontwikkelen. Door middel van PhantomJS\cite{PhantomJS} kunnen de tests vanaf de command prompt worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook op de build server uitgevoerd worden. Verder wordt er gebruik gemaakt van de imagediff\cite{imagediff} library om getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js\cite{Blanket.js}.
 
 \section{Haskell}
-De Haskellcode in Canvas.hs wordt getest met behulp van \emph{Hspec}. Hier is voor gekozen omdat Hspec relatief eenvoudig werkt en goed integreert met Cabal. Hierbij kan Hspec automatisch de verschillende tests in een bestandsmap ontdekken en uitvoeren.
+De Haskell-code in Canvas.hs wordt getest met behulp van \emph{Hspec}\cite{Hspec}. Hier is voor gekozen omdat Hspec relatief eenvoudig werkt en goed integreert met cabal. Hierbij kan Hspec automatisch de verschillende tests in een bestandsmap ontdekken en uitvoeren.
 
-In samenwerking met Hspec wordt \emph{QuickCheck} gebruikt. Dit veel gebruikte testframework maakt het mogelijk om een groot aantal willekeurige testcases uit te voeren. Dit geeft extra zekerheid over de geteste code aangezien er naast de bekende edge cases, waarvoor tests in Hspec zijn geschreven, ook een groot aantal willekeurige cases wordt getest.
+In samenwerking met Hspec wordt \emph{QuickCheck}\cite{QuickCheck} gebruikt. Dit veel gebruikte testframework maakt het mogelijk om een groot aantal willekeurige testcases uit te voeren. Dit geeft extra zekerheid over de geteste code aangezien er naast de bekende edge cases, waarvoor tests in Hspec zijn geschreven, ook een groot aantal willekeurige cases wordt getest.
