--- a/references.bib
+++ b/references.bib
@@ -33,7 +33,7 @@
 @misc{Warp,
 	author = {Michael Snoyman and Kazu Yamamoto and Matt Brown},
 	title = "warp: A fast, light-weight web server for WAI applications.",
-	month = "january",
+	month = "januari",
 	year = "2014",
 	howpublished = {\url{http://hackage.haskell.org/package/warp}}
 }
@@ -41,7 +41,7 @@
 @misc{Happstack,
 	author = {{Happstack team and HAppS LLC}},
 	title = "happstack-server: Web related tools and services.",
-	month = "january",
+	month = "januari",
 	year = "2014",
 	howpublished = {\url{http://hackage.haskell.org/package/happstack-server}}
 }
@@ -57,7 +57,7 @@
 @misc{SnapServer,
 	author = {James Sanders and Gregory Collins and Doug Beardsley},
 	title = "snap-server: A fast, iteratee-based, epoll-enabled web server for the Snap Framework",
-	month = "january",
+	month = "januari",
 	year = "2014",
 	howpublished = {\url{http://hackage.haskell.org/package/snap-server}}
 }
@@ -81,10 +81,59 @@
 @misc{KineticJS,
 	author = {Eric Rowell},
 	title = "KineticJS",
-	month = "january",
+	month = "januari",
 	year = "2014",
 	howpublished = {\url{http://kineticjs.com/}}
 }
+
+@misc{Hspec,
+	author = {Simon Hengel},
+	title = "Hspec",
+	month = "december",
+	year = "2013",
+	howpublished = {\url{http://hspec.github.io/}}
+}
+
+@misc{QuickCheck,
+	author = {Koen Claessen},
+	title = "QuickCheck",
+	month = "maart",
+	year = "2013",
+	howpublished = {\url{http://hackage.haskell.org/package/QuickCheck}}
+}
+
+@misc{Jasmine,
+	author = {Rajan Agaskar},
+	title = "Jasmine",
+	month = "januari",
+	year = "2013",
+	howpublished = {\url{http://pivotal.github.io/jasmine/}}
+}
+
+@misc{PhantomJS,
+	author = {Ariya Hidayat},
+	title = "PhantomJS",
+	month = "december",
+	year = "2013",
+	howpublished = {\url{http://phantomjs.org/}}
+}
+
+@misc{imagediff,
+	author = {Carl Sutherland},
+	title = "js-imagediff",
+	month = "augustus",
+	year = "2013",
+	howpublished = {\url{http://humblesoftware.github.io/js-imagediff/}}
+}
+
+@misc{Blanket.js,
+	author = {Alex Seville},
+	title = "Blanket.js",
+	month = "april",
+	year = "2013",
+	howpublished = {\url{http://blanketjs.org/}}
+}
+
 @misc{Websockets,
 	author = {Jasper Van der Jeugt and Siniša Biđin and Steffen Schuldenzucker and Alex Lang},
 	title = "Websockets",
