Teksten aangepast in het test resultaten

--- a/Hoofdstukken/resultaten/performance_analyse.tex
+++ b/Hoofdstukken/resultaten/performance_analyse.tex
@@ -1,4 +1,4 @@
-\section{Performance analyse}
+\section{Performance analyse} \label{sec:performance}
 Tijdens de ontwikkeling van de library is duidelijk geworden dat de performance van de geschreven programma's niet altijd optimaal is. Met name bij programma's die gebruik maken van \emph{timers} en bij programma's met een uitgebreidde grafische boom.
 
 Dit peformance probleem kan twee oorzaken hebben, ten eerste is het mogelijk dat de haskell zijde van de applicatie niet snel genoeg JSON-berichten kan maken en anderzijds is het mogelijk dat Javascript de binnengekomen berichten niet snel genoeg kan verwerken.
