--- a/Hoofdstukken/resultaten/testresultaten.tex
+++ b/Hoofdstukken/resultaten/testresultaten.tex
@@ -1,9 +1,7 @@
 \section{Testresultaten} \label{sec:testresultaten}
+Zoals in \autoref{hoofdstuk:testplan} beschreven zijn er verschillende tools en libraries gebruikt voor het automatisch testen van de functionele requirements. Daarnaast is er een aanpak voor het testen van de niet-functionele requirements. In dit hoofdstuk staan de resultaten van de tests voor zowel de functionele als niet-functionele requirements beschreven.
 
-\todo{Onderdeel over analyse van geheugengebruik schrijven}
-\todo{Performance analyse van JavaScript onderdeel schrijven}
-
-Door het gebruik van voornamelijk twee verschillende programmeertalen zijn de tests voor deze toepassingen ook apart geschreven. Alle tests kunnen gezamenlijk via cabal test aangeroepen worden. Dit vereist wel enige configuratie. Uitgebreide uitleg over het uitvoeren en ontwikkelen van tests is te vinden op de website van Canvas.hs: \url{http://canvashs.github.io/test.html}.
+De resultaten van de automatische tests kunnen gecontrolleerd worden door deze zelf uit te voeren. Een uitgebreide uitleg over het uitvoeren en ontwikkelen van tests is te vinden op de website van Canvas.hs: \url{http://canvashs.github.io/test.html}.
 
 \subsection{JavaScript}
 Voor de JavaScript code zijn unit tests ontwikkeld in Jasmine. Met behulp van Blanket.js is de code coverage van de tests gemeten. Hieronder wordt de lijst met testcases weergegeven van de JavaScript code. Alle test cases worden correct uitgevoerd.
@@ -61,13 +59,13 @@ Er zijn non-functionele requirements opgesteld in \autoref{hoofdstuk:requirement
     \begin{enumerate}[label={T\arabic{enumi}.\arabic*}]
     	\item de demoapplicatie kan gedraaid worden in Chrome 32
     	\item de demoapplicatie kan gedraaid worden in Firefox 26
-    	\item de demoapplicatie kan gedraaid worden in Internet Explorer 11 \todo{Dit daadwerkelijk testen}
-    	\item de demoapplicatie kan gedraaid worden in Safari 7 \todo{Dit daadwerkelijk testen}
+    	\item de demoapplicatie kan gedraaid worden in Internet Explorer 11
+    	\item de demoapplicatie kan gedraaid worden in Safari 7
     \end{enumerate}
-	\item Documentatie, bij deze test wordt gekeken of de documentatie aanwezig is voor de code. \todo{Haddock coverage en jsdoc coverage, hier neerzetten?}
-	\item Modulair opgebouwd. \todo{Weet even niet hoe we dit hier neer moeten zetten}
-	\item Code coverage \todo{Hier iets over zeggen}
+	\item Het controlleren van de code coverage voor de testen geschreven voor JavaScript en Haskell
 \end{enumerate}
+
+Met de code covarage libraries beschreven in \autoref{hoofdstuk:testplan} hebben we vast kunnen stellen dat onze testen de in JavaScript geschreven code voor 70 \% dekken en de Haskell code voor 80 \%. \todo{Getallen kloppend maken} 
 
 
 \subsection{Traceability matrix} \label{sec:traceability}
