--- a/Hoofdstukken/testplan.tex
+++ b/Hoofdstukken/testplan.tex
@@ -1,10 +1,9 @@
 \chapter{Testplan} \label{hoofdstuk:testplan}
-Gedurende het gehele ontwikkelingstraject moeten tests ontwikkeld worden. Voor elke requirement, feature en elk object moet een bijbehorende test worden ontwikkeld. In dit hoofdstuk staat hoe het testen is opgezet en welke technieken daarbij zijn gebruikt.
+Gedurende het gehele ontwikkelingstraject zullen tussenreslultaten getest moeten worden. Het heeft de voorkeur dat dit vaak gebeurd zonder dat er veel tijd nodig is voor het uitvoeren van de tests. Voor elke requirement, feature en elk object moet een bijbehorende test worden ontwikkeld.
 
-Er zijn een aantal tests geschreven in code deze kunnen gemakkelijk uitgevoerd worden via \emph{cabal}, een gereedschap dat gebruikt wordt bij programmeren in Haskell. Deze geschreven tests testen zowel de Haskell code als de JavaScript code. De testconfiguraties voor beide typen tests worden in een zogenaamde cabal file bijgehouden. Met het commando \inlinecode{cabal test} kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies over het uitvoeren van tests.
+In het eerste deel van dit hoofdstuk zal voornamelijk beschreven staan hoe de automatische testen zijn opgezet. Doordat Canvas.hs gebruik maakt van verschillende programmeer talen zijn er uiteindelijk ook meerdere testtechnieken en libraries nodig om alles goed te testen en te meten. Maar omdat sommige requirements gemakkelijker automatisch te testen zijn dan andere zullen uiteindelijk ook een aantal requirements getest worden door een gebruiker in plaats van door een computer.
 
-\section{Continuous Integration}
-Zoals eerder genoemd in \autoref{sec:technische_organisatie} is er tijdens het project gebruik gemaakt van automatisch testen. Iedere ontwikkelaar stuurt gedurende de ontwikkeling zijn aanpassingen naar de centrale repository. Deze centrale repository is gekoppeld met Travis, een cloud-based continuous integration server. Travis voert automatisch tests uit na elke commit die naar de repository gestuurd is. Indien Travis fouten detecteert bij het draaien van de tests wordt dat aan de ontwikkelaars gemeld. Doordat de code automatisch getest wordt is altijd duidelijk welke bij welke commit fouten in worden introduceert, wat de status van iedere branch is en of een branch gemergd kan worden naar de development branch.
+De geschreven tests kunnen gemakkelijk uitgevoerd worden via \emph{cabal}, een gereedschap dat gebruikt wordt bij programmeren in Haskell. Deze geschreven tests testen zowel de Haskell code als de JavaScript code. De testconfiguraties voor beide typen tests worden in een zogenaamde cabal file bijgehouden. Met het commando \inlinecode{cabal test} kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies over het uitvoeren van tests. \url{http://canvashs.github.io/test.html}
 
 \section{JavaScript} 
 Aan de client side wordt gewerkt met JavaScript. Het Jasmine\cite{Jasmine} test framework wordt gebruikt om de tests hiervoor te ontwikkelen. Door middel van PhantomJS\cite{PhantomJS} kunnen de tests vanaf de command prompt worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook op de build server uitgevoerd worden. Verder wordt er gebruik gemaakt van de imagediff\cite{imagediff} library om getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js\cite{Blanket.js}.
@@ -13,3 +12,9 @@ Aan de client side wordt gewerkt met JavaScript. Het Jasmine\cite{Jasmine} test 
 De Haskell-code in Canvas.hs wordt getest met behulp van \emph{Hspec}\cite{Hspec}. Hier is voor gekozen omdat Hspec relatief eenvoudig werkt en goed integreert met cabal. Hierbij kan Hspec automatisch de verschillende tests in een bestandsmap ontdekken en uitvoeren.
 
 In samenwerking met Hspec wordt \emph{QuickCheck}\cite{QuickCheck} gebruikt. Dit veel gebruikte testframework maakt het mogelijk om een groot aantal willekeurige testcases uit te voeren. Dit geeft extra zekerheid over de geteste code aangezien er naast de bekende edge cases, waarvoor tests in Hspec zijn geschreven, ook een groot aantal willekeurige cases wordt getest.
+
+\section{Continuous Integration}
+Zoals eerder genoemd in \autoref{sec:technische_organisatie} is er tijdens het project gebruik gemaakt van automatisch testen. Iedere ontwikkelaar stuurt gedurende de ontwikkeling zijn aanpassingen naar de centrale repository. Deze centrale repository is gekoppeld met Travis, een cloud-based continuous integration server. Travis voert automatisch tests uit na elke commit die naar de repository gestuurd is. Indien Travis fouten detecteert bij het draaien van de tests wordt dat aan de ontwikkelaars gemeld. Doordat de code automatisch getest wordt is altijd duidelijk welke bij welke commit fouten in worden introduceert, wat de status van iedere branch is en of een branch gemergd kan worden naar de development branch.
+
+\section{Blackbox}
+Naast de automatische tests voor verschillende functionele requirements zullen ook een aantal niet-functionele requirements getest moeten worden. Hiervoor is het lastig automatische testen te schrijven. Hierbij zal het vooral gaan om de cross-platform requirements beschreven in \autoref{hoofdstuk:requirements}. Hiervoor zullen verschillende demo applicaties in verschillende browsers en besturingssystemen getest worden.
